data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1227.wast
;; 8. **Dynamic Index Generation:**    - Description: The index for the `br_table` is computed dynamically within the code (e.g., based on a function's result).    - Evaluate the implementation’s ability to handle dynamically computed indices and ensure the branch targets are correctly processed.    - Specific Constraint: Ensure dynamic index generation leads to correct execution paths without misinterpretation.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 1)
      (br_table 0 1 (i32.const 0)) ;; Dynamic index generation
    )
  )
  "type mismatch"
)